v3.10.2 (XXXX-XX-XX)
--------------------

* Fixed issue #17367: FILTER fails when using negation (!) on variable whose
  name starts with "in". Add trailing context to NOT IN token.

* Fix disk space metrics rocksdb_free_disk_space and rocksdb_total_disk_space 
  on macOS. Previously, they seem to have reported wrong values.

* Show number of HTTP requests in cluster query profiles.

* Removed assertions from cluster rebalance js test that obligated the rebalance
  plan to always have moves, but there were cases in which all there are none.

* Improved the syntax highlighter for AQL queries in the web interface
  with support for multi-line strings, multi-line identifiers in forward
  and backticks, colorization of escape sequences, separate tokens for
  pseudo-keywords and pseudo-variables, an updated regex for numbers, and
  the addition of the AT LEAST and WITH COUNT INTO constructs.


v3.10.1 (2022-11-04)
--------------------

* Updated OpenSSL to 1.1.1s.

* Solve a case of excessive memory consumption in certain AQL queries with IN
  filters with very long lists. Free sub-iterators as soon as they are
  exhausted.

* BTS-1070: Fixed query explain not dealing with an aggregate function without
  arguments and the WINDOW node not being defined as an Ast node type name.

* Updating properties of a satellite collection breaks replicationFactor.

* Log the documents counts on leader and follower shards at the end of each
  successful shard synchronization.

* Remove superfluous dash character from startup option name
  `--temp.-intermediate-results-encryption-hardware-acceleration`.

* FE-159: When creating a database in cluster mode, there are several parameters
  required. However they are invisible (nothing shown) if I open DB settings
  after creation. Those settings should be visible in readonly mode (grey out).

* Added startup option `--query.log-failed` to optionally log all failed AQL
  queries to the server log. The option is turned off by default.
