@@ -120,12 +120,15 @@ void QueryOptions::fromVelocyPack(VPackSlice slice) {
   value = slice.get("memoryLimit");
   if (value.isNumber()) {
     size_t v = value.getNumber<size_t>();
-    if (v > 0 && (allowMemoryLimitOverride || v < memoryLimit)) {
+    if (allowMemoryLimitOverride) {
+      memoryLimit = v;
+    } else if (v > 0 && v < memoryLimit) {
       // only allow increasing the memory limit if the respective startup option
-      // is set. and if it is set, only allow decreasing the memory limit
+      // is set. and if it is not set, only allow decreasing the memory limit
       memoryLimit = v;
     }
   }
+
   value = slice.get("maxNumberOfPlans");
   if (value.isNumber()) {
     maxNumberOfPlans = value.getNumber<size_t>();
